# business-game

./: .clang-format  .clang-tidy  CMakeLists.txt  CMakePresets.json  LibraryCode.cpp  README.md  main.cpp  test.cpp
.github/workflows/: ci.yml  cmake-multi-platform.yml
cmake/: FetchGTest.cmake  FetchSFML.cmake
src/: CMakeLists.txt  GameController.cpp  GameController.hpp  WindowSFML.cpp  WindowSFML.hpp  main.cpp
src/controllers/: EventController.cpp  EventController.hpp  EventControllerI.hpp  GameController.cpp  GameController.hpp  KeyEventHandlerI.hpp  ScreenController.cpp  ScreenController.hpp  ScreenControllerI.hpp
src/core/: WindowI.hpp  WindowSFML.cpp  WindowSFML.hpp
src/entities/: Button.cpp  Button.hpp  EntityI.hpp  Paddle.cpp  Paddle.hpp  Player.cpp  Player.hpp
src/handlers/: IsHoverHandlerI.hpp  OnClickHandler.cpp  OnClickHandler.hpp  OnHoverHandler.cpp  OnHoverHandler.hpp
src/managers/: ClosedEventManager.cpp  ClosedEventManager.hpp  ClosedEventManagerI.hpp  EntitiesManagerI.hpp  EventManagerI.hpp  EventManagerOf.cpp  EventManagerOf.hpp  EventManagers.hpp  GameExitManager.cpp  GameExitManager.hpp  GameExitManagerI.hpp  KeyPressedManager.cpp  KeyPressedManager.hpp  KeyPressedManagerI.hpp  KeyReleasedManager.cpp  KeyReleasedManager.hpp  KeyReleasedManagerI.hpp  KeyboardManager.cpp  KeyboardManager.hpp  KeyboardManagerI.hpp  ManagerOf.cpp  ManagerOf.hpp  MouseManager.cpp  MouseManager.hpp  MouseManagerI.hpp  MouseMovedManager.cpp  MouseMovedManager.hpp  MouseMovedManagerI.hpp
src/screens/: GameScreen.cpp  GameScreen.hpp  MenuScreen.cpp  MenuScreen.hpp  ScreenI.hpp  ScreenUpdaterI.hpp
src/sum-library/: CMakeLists.txt  LibraryCode.cpp  LibraryCode.h  LibraryCode.hpp
src/utils/: EventPrinter.cpp  EventPrinter.hpp  ManagedList.hpp
src/window/: CleanerI.hpp  DisplayerI.hpp  DrawerI.hpp  EventCollectorI.hpp  ScreenRendererI.hpp  WindowCloserI.hpp  WindowControlI.hpp  WindowI.hpp  WindowOpenerI.hpp  WindowSFML.cpp  WindowSFML.hpp
test/: CMakeLists.txt  test.cpp
tests/: CMakeLists.txt  test.cpp
tests/mocks/controllers/: EventControllerMock.hpp  ScreenControllerMock.hpp
tests/mocks/core/: EventCollectorMock.hpp  WindowMock.hpp
tests/mocks/handlers/: OnClickHandlerMock.hpp  OnHoverHandlerMock.hpp
tests/mocks/managers/: ClosedEventManagerMock.hpp  EventManagerMock.hpp  GameExitManagerMock.hpp  KeyPressedManagerMock.hpp  KeyReleasedManagerMock.hpp  KeyboardManagerMock.hpp  MouseManagerMock.hpp  MouseMovedManagerMock.hpp
tests/mocks/utils/: ActionMock.hpp
tests/mocks/window/: EventCollectorMock.hpp  WindowMock.hpp
tests/unit_tests/: CMakeLists.txt  EventControllerTest.cpp  GameControllerTest.cpp
tests/unit_tests/controllers/: EventControllerTest.cpp  GameControllerTest.cpp
tests/unit_tests/handlers/: OnClickHandlerTest.cpp  OnHoverHandlerTest.cpp
tests/unit_tests/managers/: ClosedEventManagerTest.cpp  GameExitManagerTest.cpp  KeyPressedManagerTest.cpp  KeyReleasedManagerTest.cpp  KeyboardManagerTest.cpp  MouseManagerTest.cpp  MouseMovedManagerTest.cpp
